Save work before pull

--- a/home.html
+++ b/home.html
@@ -67,13 +67,26 @@
             <div class="data-display">
                 <div class="card-data data-box">
                     <h2>Card Details</h2>
-                    <p id="cardInfo">
-                        No card details saved yet.
-                    </p>
+                    <table>
+                        <tr>
+                            <th>Website</th>
+                            <th>Username</th>
+                            <th>Password</th>
+                        </tr>
+                        <tr>
+                            <td>facebook.com</td>
+                            <td>john@fb.com</td>
+                            <td>••••••••</td>
+                        </tr>
+                    </table>
                 </div>
                 <div class="password-data data-box">
                     <h2>Password Details</h2>
-                    <p id="passwordInfo">No password details saved yet.</p>
+                    <p id="passwordInfo">
+                        <strong>Website:</strong> example.com<br>
+                        <strong>Username:</strong> johndoe@example.com<br>
+                        <strong>Password:</strong> •••••••• <button onclick="alert('Password copied!')">Copy</button>
+                    </p>
                 </div>
             </div>
         </div>
